--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -11,6 +11,7 @@ body{
 
 .block-sorting{
 	margin-top: 30px;
+	margin-bottom: 30px;
 	border-radius: 4px;
 	padding: 3px;
 	background: $accent;
@@ -19,22 +20,21 @@ body{
 	display: flex;
 	align-items: center;
 
-	select{
-		appearance: none;
-		height: 40px;
-		border-radius: 4px;
-		padding: 0px 20px;
-		border: none;
-		color: #5e5e5e;
-		cursor: pointer;
-		margin-right: 10px;
-
-		option{
-			padding: 10px;
-		}
+	.v-select{
+		margin-right: 30px;
 
 		&:last-child{
 			margin-right: 0;
+		}
+
+		.v-input__slot{
+			margin-bottom: 0;
+			background: #fff !important;
+			border: none !important;
+		}
+
+		.v-text-field__details{
+			display: none;
 		}
 	}
 }
@@ -54,5 +54,28 @@ body{
 
 	h3{
 		font-size: 16px;
+	}
+}
+
+
+.topServices{
+	.topServices-heading{
+
+		p{
+			font-size: 16px;
+			font-weight: bold;
+		}
+	}
+
+	.topServices-list{
+
+	}
+}
+
+.left-side__index{
+	.links{
+		p{
+			font-weight: bold;
+		}
 	}
 }
