--- a/src/resources/sass/main.scss
+++ b/src/resources/sass/main.scss
@@ -1,6 +1,6 @@
 body{
 	background: #f5f5f5;
-	font-family: 'open-sans', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 // список сервисов
@@ -13,22 +13,25 @@ body{
 	margin-top: 30px;
 	margin-bottom: 30px;
 	border-radius: 4px;
-	padding: 3px;
+	padding: 5px;
 	background: $accent;
-	box-shadow: 0px 5px 13.92px 2.08px rgba(17, 127, 212, 0.35);
+	box-shadow: 0px 8px 15px 2px rgba(66, 186, 236, 0.3);
 
 	display: flex;
 	align-items: center;
 
 	.v-select{
+		flex: none;
 		min-width: 200px;
 		width: 100%;
-		margin-right: 20px;
+		max-width: 360px;
+		margin-right: 5px;
 
 		.vs__dropdown-toggle{
+
 			background: #fff;
-			padding: 8px 5px;
-			//border: none;
+			padding: 6px 5px 8px;
+			border: none;
 
 			input{
 				background: none;
@@ -38,38 +41,60 @@ body{
 			}
 		}
 
+		.vs__dropdown-menu{
+			border: none;
+			li{
+				padding-top: 10px;
+				padding-bottom: 10px;
+			}
+		}
+
 		&:last-child{
 			margin-right: 0;
+		}
+	}
+
+	.search{
+		width: 100%;
+
+		input{
+			border: none;
+			padding: 10px;
+			width: 100%;
+			border-radius: 4px;
+			outline: none;
+			height: 40px;
+			
+			&::-webkit-input-placeholder{
+				color: #ADADAD
+			}
 		}
 	}
 }
 
 
 .name-service{
-	margin-top: 20px;
-	h2, h3{
-		color: #ababab;
-		margin: 0;
-	}
+	margin-bottom: 10px;
 
 	h2{
-		font-size: 30px;
+		margin-top: 0;
 		margin-bottom: 8px;
-	}
-
-	h3{
-		font-size: 16px;
+		font-size: 26px;
+		font-weight: 500;
+		color: #a6b9c1;
 	}
 }
 
 
-
 .topServices{
+
 	.topServices-heading{
+		margin-bottom: 15px;
 
 		p{
-			font-size: 16px;
-			font-weight: bold;
+			font-size: 18px;
+			margin: 0;
+			letter-spacing: .2px;
 		}
 	}
 
@@ -79,11 +104,30 @@ body{
 }
 
 .left-side__index{
-	border: 1px solid red;
+	//border: 1px solid red;
 	height: 100%;
+
 	.links{
 		p{
-			font-weight: bold;
+			margin: 0;
+			cursor: pointer;
+			font-size: 16px;
+			color: #fa3102;
+			display: inline;
 		}
 	}
 }
+
+.listCarServices{
+
+	.countCarServices{
+		margin-bottom: 8px;
+		p{
+			margin: 0;
+			font-size: 14px;
+			color: #c5c5c5;
+		}
+	}
+}
+
+
